Chapter4-5: Rails-flavored Ruby & Filling in the layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,26 @@
     <title><%= yield(:title)%><%= t "static_pages.title" %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track": "reload" %>
     <%= javascript_pack_tag "application", "data-turbolinks-track": "reload" %>
   </head>
-
   <body>
-    <%= yield %>
+    <header class="navbar navbar-fixed-top navbar-inverse">
+      <div class="container">
+        <%= link_to t("static_pages.main"), root_path, id: "logo" %>
+        <nav>
+        <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to t("static_pages.home.index"),root_path %></li>
+          <li><%= link_to t("static_pages.help.index"),help_path %></li>
+          <li><%= link_to t("static_pages.login.index"), "#" %></li>
+        </ul>
+        </nav>
+      </div>
+    </header>
+    <%= render "layouts/header" %>
+    <div class="container">
+      <%= yield %>
+      <%= render "layouts/footer" %>
+    </div>
   </body>
 </html>
