--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, (t "static_pages.contact.index")) %>
+<% provide :title, t("static_pages.contact.index") %>
 <h1><%= t "static_pages.contact.index"%></h1>
 <p>
-    <%= raw t "static_pages.contact.desc"%>
+  <%= raw t "static_pages.contact.desc"%>
 </p>
