--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,9 @@
-<% provide(:title, (t "static_pages.home.index")) %>
-<h1><%= t "static_pages.home.title"%></h1>
-<p>
+<% provide :title, t("static_pages.home.index") %>
+<div class="center jumbotron">
+  <h1><%= t "static_pages.home.title"%></h1>
+  <p>
     <%= raw t "static_pages.home.desc"%>
-</p>
+  </p>
+  <%= link_to t("static_pages.home.sign_up"), signup_path, class: "btn btn-lg btn-primary" %>
+</div>
+<%= link_to image_tag("rails.png", alt: t("static_pages.home.logo"), width: "200px"), "https://rubyonrails.org/" %>
